; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_http3.c_main.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_http3.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CURLOPT_URL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"https://example.com\00", align 1
@CURLOPT_HTTP_VERSION = common dso_local global i32 0, align 4
@CURL_HTTP_VERSION_3 = common dso_local global i64 0, align 8
@CURLE_OK = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [32 x i8] c"curl_easy_perform() failed: %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %4 = call i32* (...) @curl_easy_init()
  store i32* %4, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %28

7:                                                ; preds = %0
  %8 = load i32*, i32** %2, align 8
  %9 = load i32, i32* @CURLOPT_URL, align 4
  %10 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %8, i32 %9, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %11 = load i32*, i32** %2, align 8
  %12 = load i32, i32* @CURLOPT_HTTP_VERSION, align 4
  %13 = load i64, i64* @CURL_HTTP_VERSION_3, align 8
  %14 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %11, i32 %12, i64 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @curl_easy_perform(i32* %15)
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* @CURLE_OK, align 4
  %19 = icmp ne i32 %17, %18
  br i1 %19, label %20, label %25

20:                                               ; preds = %7
  %21 = load i32, i32* @stderr, align 4
  %22 = load i32, i32* %3, align 4
  %23 = call i8* @curl_easy_strerror(i32 %22)
  %24 = call i32 @fprintf(i32 %21, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0), i8* %23)
  br label %25

25:                                               ; preds = %20, %7
  %26 = load i32*, i32** %2, align 8
  %27 = call i32 @curl_easy_cleanup(i32* %26)
  br label %28

28:                                               ; preds = %25, %0
  ret i32 0
}

declare dso_local i32* @curl_easy_init(...) #1

declare dso_local i32 @curl_easy_setopt(i32*, i32, ...) #1

declare dso_local i32 @curl_easy_perform(i32*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i8* @curl_easy_strerror(i32) #1

declare dso_local i32 @curl_easy_cleanup(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
